gcc/testsuite/rust/rustc/ui/save-analysis/issue-73020.rs
// compile-flags: -Zsave-analysis
use {self}; // { dg-error ".E0431." "" { target *-*-* } }

fn main () {
}

